# TechStack

./: README.md  demo.md
Handdraw_Digit_Recogniton/: 实验报告.md  数据记录.xlsx
Handdraw_Digit_Recogniton/SVM/code/: demo.py  mytest.py  pca_process.py  svm.py  svmtest.py
Handdraw_Digit_Recogniton/draw/: draw_pic.ipynb
MyVector/: CMakeLists.txt  READEME.md  main.cpp
MyVector/include/: Iter.h  Vec.h  test.h
MyVector/src/: test.cpp
resource/: Office.md
